# MLKAPS

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit-intel.yaml  pre-commit.yaml  python-app.yaml
doc/: json_conf.md
doc/source/: conf.py  index.rst
doc/source/user-guides/: pipeline.rst  quick-start.rst
doc/source/user-guides/pipeline/: clustering.rst  kernel_sampling.rst  modeling.rst  optimization.rst
doc/source/user-guides/usage/: configuration_file.rst  required_scripts.rst  writing_a_benchmark.rst
examples/: .gitignore
examples/configurations/: ga_adaptive.json  hvs.json  hvsr.json  multilevel_hvsr.json  random.json
examples/hvs_ask_example/: main.py
examples/hvs_grid/: hvs.json  main.py
examples/hvs_sinabs/: main.py  plot_animation.sh
examples/openblas/: Readme.md  _setup_all.sh  config_mlkaps_template.json  exploration.py  run_all.sh  setup_all.sh  templatize.py
examples/openblas/openblas_kernel/: CMakeLists.txt  main.cpp  test_parallel.c
examples/openblas/runs/test_run/: nthreads_clustered_model.pkl  performance_model.pkl
examples/openblas/runs/test_run/metadata/: configuration.json
examples/synthetic2D/: Readme.md  ga_adaptive.json  main.py  test_2d.py
mlkaps/: MLKaps.py  __init__.py  _utils.py
mlkaps/clustering/: __init__.py  clustering_algorithm.py  clustering_visualization.py
mlkaps/codegen/: __init__.py  codegen.py
mlkaps/configuration/: __init__.py  _parser.py  _parsing_helpers.py  compilation_configuration.py  experiment_configuration.py
mlkaps/modeling/: __init__.py  encoding.py  lightgbm_wrapper.py  model_wrapper.py  modeling.py  optuna_model_tuner.py  quantile_variance_estimator.py  xgboost_wrapper.py
mlkaps/optimization/: __init__.py  genetic_optimizer.py  optimizer_checkpoint.py
mlkaps/sample_collection/: __init__.py  common.py  failed_run_resolver.py  function_harness.py  kernel_sampling.py  mono_kernel_executor.py  samples_checkpoint.py  subprocess_harness.py
mlkaps/sampling/: __init__.py  generic_bounded_sampler.py  grid_sampler.py  sampler.py  sampler_factory.py  static_sampler.py  variable_mapping.py
mlkaps/sampling/adaptive/: __init__.py  adaptive_sampler.py  ga_adaptive.py  hvs.py  multilevel_hvs.py  orchestrator.py
mlkaps/sampling/bayesian/: global_bayesian.py  kdtree.py
tests/: run_doctest.py
tests/integration/: builder_helper.py  conftest.py
tests/integration/synthethic_2d/: ga_adaptive.json  ga_adaptive_optuna.json  ga_adaptive_short.json  ga_adaptive_single_input_optuna.json  ga_adaptive_xgboost.json  hvs.json  hvs_short.json  hvsr.json  main.py  multilevel_hvsr.json  multilevel_hvsr_short.json  optuna_model.json  random.json  random_short.json  test_2d.py  test_2d_optimization.py  test_2d_sampling.py
tests/unit/checkpoints/: conftest.py  dummy_clock.py  dummy_recovery_kernel.py  test_optimizer_checkpoint.py  test_samples_checkpoint.py  test_samples_recovery.py  test_samples_remote_recovery.py
tests/unit/compilation_module/: test_compilation.py
tests/unit/compilation_module/dummy_jsons/: missing_compilation_script.json  non_executable_compilation_script.json  predefined_sets.json  static_flags.json  valid_json.json
tests/unit/parsing/: test_parser.py
tests/unit/parsing/dummy_jsons/: missing_sections.json  valid_json.json
tests/unit/parsing/dummy_jsons/parameters/: invalid_numerical_parameter_value.json  missing_design_parameters.json  missing_kernel_inputs.json  unknown_parameter_type.json
tests/unit/parsing/dummy_jsons/sampling/: invalid_scripts.json  missing_executable.json  missing_objectives.json  unknown_sampling_method.json
tests/unit/sample_collection/: dummy_kernel.py  dummy_kernel_simple.py  dummy_module.py  test_function_harness.py  test_kernel_sampling.py  test_subprocess_harness.py
tests/unit/sampling/adaptive/: test_hvs.py  test_multilevel_hvs.py  test_simple.py  test_stopping_criterion.py
tests/unit/sampling/bayesian/: test_global_bayesian.py  test_kdtree.py
