[project]
name = "mlkaps"
description = "Machine Learning for Kernel accuracy and performance studies."
version = "0.3.0.1"

dependencies = [
    "deprecated",
    "pytest",
    "scikit_learn",
    "matplotlib",
    "numpy",
    "pandas",
    "pymoo",
    "scipy",
    "smt",
    "tqdm",
    "lightgbm",
    "xgboost",
    "optuna",
    "psutil",
    "flit-core",
    "tk",
    "sphinx-autoapi",
    "sphinx_rtd_theme"

]



[project.scripts]
mlkaps = "mlkaps:MLKaps.run_from_args"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7,<4"]

[tool.pytest.ini_options]
addopts = "-v --doctest-modules --import-mode=importlib"
testpaths = ["tests", "mlkaps"]

[tool.black]
line-length = 127
exclude = '''(
    /(
        .git
        | __pycache__
        | build
        | dist
    )/
)'''
